# property-sale-screening

./: CLAUDE.md  PROJECT_CONTEXT.md  docker-compose.yml  openapi.json  setup.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 75ec48cab47f_add_status_to_generated_files.py  c1b55b2ba0be_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/llm/: agent.py  nl_search_agent.py
backend/app/models/: __init__.py  base.py  company.py  kpi.py  longlist.py  phase2.py  screening.py  user.py
backend/app/repositories/: base.py  company_detail_repository.py  company_repository.py  event_repository.py  kpi_repository.py  longlist_repository.py  screening_repository.py  user_repository.py
backend/app/services/: company_search_service.py  event_scoring.py  integration_scoring.py  kpi_service.py  longlist_service.py  qualitative_signal.py  report_service.py  structure_scoring.py
backend/scripts/: export_openapi.py  seed.py  seed_demo_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_company_detail.py  test_company_search_api.py  test_dashboard.py  test_events.py  test_kpi_api.py  test_longlist.py
backend/tests/unit/: test_company_detail_repository.py  test_company_search_service.py  test_event_scoring.py  test_integration_scoring.py  test_kpi_service.py  test_longlist_repository.py  test_longlist_service.py  test_nl_search_agent.py  test_qualitative_signal.py  (+2 more)
(+146 files in other folders)
